minor spacing issues

--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -7,7 +7,6 @@ html, body
 header
     width: 100%
     height: 100%
-    //background: black
     background: url(../images/night.jpg) center center
     background-size: cover
     
@@ -71,9 +70,8 @@ header
 
     #title 
         display: inline-block
-        font:
-            size: 124px
-            weight: 100
+        font-size: 124px
+        font-weight: 100
         text-transform: uppercase
         color: white
         letter-spacing: 0.1em
