--- a/assets/css/3-sections/_skills.sass
+++ b/assets/css/3-sections/_skills.sass
@@ -44,8 +44,7 @@
     max-width: 900px
     margin: 0 auto
     margin-bottom: 0
-    font:
-        size: 18px
+    font-size: 18px
     text-align: justify
 
 .description2-2
@@ -53,8 +52,7 @@
     max-width: 900px
     margin: 0 auto
     margin-bottom: 0
-    font:
-        size: 18px
+    font-size: 18px
     text-align: justify
     
 .header
@@ -87,16 +85,14 @@
         max-width: 900px
         margin-left: 40px
         margin-right: 40px
-        font:
-            size: 18px
+        font-size: 18px
         text-align: justify
 
     .description2-2
         max-width: 900px
         margin-left: 40px
         margin-right: 40px
-        font:
-            size: 18px
+        font-size: 18px
         text-align: justify
 
     .header
